Remove LANG= from CI, for windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
 
     - name: Run tests
       run: |
-        LANG=en_US.UTF-8 python -m nose --with-coverage --cover-package markovify test
+        python -m nose --with-coverage --cover-package markovify test
         python -m coverage html
 
     - name: Upload code coverage
