--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,12 +61,10 @@ jobs:
         python -m site
         python -m pip install --upgrade pip setuptools wheel
         pip install -r requirements.txt
-        pip install nose coveralls
+        pip install -r requirements-dev.txt
 
     - name: Run tests
-      run: |
-        python -m nose --with-coverage --cover-package markovify test
-        python -m coverage html
+      run: make tests
 
     - name: Upload code coverage
       uses: codecov/codecov-action@v1.0.12
