Update coverage-testing setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,11 +7,5 @@ ignore =
     # Impossible to obey both W503 and W504
     W503
 
-[tox]
-envlist = py36,py37,py38,py39
-toxworkdir={env:TOX_WORK_DIR:.tox}
-
-[testenv]
-deps=
-    -r requirements-dev.txt
-commands=nosetests --with-coverage --cover-package markovify test
+[tool:pytest]
+addopts=--cov=markovify --cov-report xml:coverage.xml --cov-report term
